RESOLVED FIXED72005
Do not share CSS style for MediaElement backed by a plugin
https://bugs.webkit.org/show_bug.cgi?id=72005
Summary Do not share CSS style for MediaElement backed by a plugin
Benjamin Poulain
Reported 2011-11-10 00:47:11 PST
RenderObject::setStyle() ASSERTs with PLUGIN_PROXY_FOR_VIDEO because the style is shared for an embedded object.
Attachments
Patch (2.28 KB, patch)
2011-11-10 01:03 PST, Benjamin Poulain
simon.fraser: review+
webkit.review.bot: commit-queue-
Benjamin Poulain
Comment 1 2011-11-10 01:03:18 PST
WebKit Review Bot
Comment 2 2011-11-10 09:03:03 PST
Comment on attachment 114452 [details] Patch Rejecting attachment 114452 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 [GTK] [WebKit2] Fix remaining gtkdoc errors When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 157. Full output: http://queues.webkit.org/results/10364042
Benjamin Poulain
Comment 3 2011-11-10 13:44:47 PST
Note You need to log in before you can comment on or make changes to this bug.