Do not share CSS style for MediaElement backed by a plugin https://bugs.webkit.org/show_bug.cgi?id=72005

Reviewed by Simon Fraser.

With PLUGIN_PROXY_FOR_VIDEO, the RenderMedia elements are rendered through RenderBoxModelObject.
Like the embedded element, the proxied media element can gain a layer outside a change of style.

This patch prevents style sharing for the Audio and Video elements when PLUGIN_PROXY_FOR_VIDEO
is enabled.

This path is covered by exising tests. In particular, http/tests/misc/empty-urls.html
ASSERT() because of this.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::canShareStyleWithElement):


Canonical link: https://commits.webkit.org/88458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99896 268f45cc-cd09-0410-ab3c-d52691b4dbfc